# py-logex

./: MANIFEST.in  README.md  logging.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
examples/: basic_usage.py  custom_config.py  multiple_loggers.py
py_logex/: __init__.py  cli.py  config.py  defaults.py  exceptions.py  logger.py  utils.py
tests/: __init__.py  test_cli.py  test_config_discovery.py  test_exceptions.py  test_logger.py
