[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-logex-enhanced"
version = "0.1.4"
description = "Simple, powerful logging with built-in exception handling and YAML configuration"
readme = "README.md"
authors = [
    {name = "SherozShaikh", email = "shaikh.sheroz07@gmail.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]
keywords = ["logging", "logger", "loguru", "exception", "yaml", "configuration"]
requires-python = ">=3.8"
dependencies = [
    "loguru>=0.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sherozshaikh/py-logex"
Documentation = "https://github.com/sherozshaikh/py-logex#readme"
Repository = "https://github.com/sherozshaikh/py-logex"
"Bug Tracker" = "https://github.com/sherozshaikh/py-logex/issues"

[project.scripts]
py_logex = "py_logex.cli:main"

[tool.setuptools]
packages = ["py_logex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=py_logex --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
